<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectionActivity"
    android:id="@+id/coordinatorLayout"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/sel_screen_city_prompt"
        />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/sel_screen_city_placeholder"
        android:imeOptions="actionNext"
        android:singleLine="true"
        >
      <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/sel_screen_days_prompt"
        />

    <EditText
        android:id="@+id/etDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/sel_screen_days_placeholder"
        android:imeOptions="actionDone"
        android:inputType="number"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
      <Button
          android:id="@+id/btnSubmit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:padding="10dp"
          android:text="@string/sel_screen_submit"
          />

    </FrameLayout>

  </LinearLayout>

  <ProgressBar
      android:id="@+id/pbLoading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:visibility="gone"
      style="?android:attr/progressBarStyleLarge"
      />
</android.support.design.widget.CoordinatorLayout>
